Revision history for Perl distribution PathTools.

3.09

 - Added some block delimiters (brackets) in the Perl_getcwd_sv() XS
   function, which were necessary to separate the variable
   declarations from the statements when HAS_GETCWD is not
   defined. [Yves]

3.08  Sat May 28 10:10:29 CDT 2005

 - Fixed a test failure with fast_abs_path() on Windows - it was
   sensitive to the rootdir() change from version 3.07. [Steve Hay]

3.07  Fri May  6 07:46:45 CDT 2005

 - Fixed a bug in which the special perl variable $^O would become
   tainted under certain versions of perl. [Michael Schwern]

 - File::Spec->rootdir() was returning / on Win32.  Now it returns \ .
   [Michael Schwern]

 - We now avoid modifying @_ in tmpdir() when it's not strictly
   necessary, which reportedly provides a modest performance
   boost. [Richard Soderberg]

 - Made a couple of slight changes to the Win32 code so that it works
   (or works better) on Symbian OS phones.  [Jarkko Hietaniemi]

3.06  Wed Apr 13 20:47:26 CDT 2005
 
 (No changes in functionality)

 - Added a note to the canonpath() docs about why it doesn't collapse
   foo/../bar sections.

 - The internal-only function bsd_realpath() in the XS file now uses
   normal arg syntax instead of K&R syntax. [Nicholas Clark]

3.05  Mon Feb 28 07:22:58 CST 2005

 - Fixed a bug in fast_abs_path() on Win32 in which forward- and
   backward-slashes were confusing things. [demerphq]

 - Failure to load the XS code in Cwd is no longer a fatal error
   (though failure to compile it is still a fatal error in the build
   process).  This lets Cwd work under miniperl in the core. [Rafael
   Garcia-Suarez]

 - In the t/cwd.t test, don't enforce loading from blib/ if we're
   testing in the perl core. [Rafael Garcia-Suarez]

3.04  Sun Feb  6 17:27:38 CST 2005

 - For perls older than 5.006, the HAS_GETCWD symbol is not available,
   because it wasn't checked for in older Configure scripts when perl