@@ -7,6 +7,9 @@ Revision history for Perl distribution PathTools.
    declarations from the statements when HAS_GETCWD is not
    defined. [Yves]
 
+ - Apparently the _NT_cwd() routine is never defined externally like I
+   thought it was, so I simplified the code around it.
+
 3.08  Sat May 28 10:10:29 CDT 2005
 
  - Fixed a test failure with fast_abs_path() on Windows - it was
